--- a/templates/hf.mobile.templates/happyface.mobile.el6/Dockerfile
+++ b/templates/hf.mobile.templates/happyface.mobile.el6/Dockerfile
@@ -7,15 +7,10 @@ RUN yum --nogpgcheck -y install https://download1.rpmfusion.org/free/el/rpmfusio
 
 
 #--------------------------------------------------------
-# Rebuilding HappyFace instance
+# Rebuilding and Installing HappyFace Mobile App
 #--------------------------------------------------------
 RUN hostname
 RUN cd /var/lib && git clone https://github.com/HappyFaceGoettingen/HappyFace-Integration-Server -b MadUpdate
-RUN cd /var/lib/HappyFace-Integration-Server && ./rebuild.sh smartphone
+RUN cd /var/lib/HappyFace-Integration-Server && git pull origin && ./rebuild.sh smartphone && yum --nogpgcheck -y install /var/lib/HappyFace-Integration-Server/RPMS/x86_64/*.rpm
 
-#--------------------------------------------------------
-# Installing HappyFace instance
-#--------------------------------------------------------
-RUN yum clean all
-RUN yum --nogpgcheck -y install /var/lib/HappyFace-Integration-Server/RPMS/x86_64/*.rpm
 
