Added some other templates

--- a/mad-gantry.conf
+++ b/mad-gantry.conf
@@ -1,9 +1,3 @@
 ## Some default dirs
-SHIP_DIR=ship
-PAYLOADS_DIR=payloads
-
-## Templates
-HF_CORE_TEMPLATE=templates/hf.core.template
-HF_MOBILE_TEMPLAT=templates/hf.mobile.template
-JENKINS_TEMPLATE=templates/jenkins.template
-
+WLCG_CONFIG_DIR=ship
+VOLUME_DIR=payloads
