Downgraded firefox for MadFace

--- a/templates/hf.core/madface.el7/Dockerfile
+++ b/templates/hf.core/madface.el7/Dockerfile
@@ -9,6 +9,7 @@ RUN yum --nogpgcheck -y install https://download1.rpmfusion.org/free/el/rpmfusio
 #--------------------------------------------------------
 # Rebuilding MadFace instance
 #--------------------------------------------------------
+RUN yum -y install ftp://mirror.switch.ch/pool/4/mirror/scientificlinux/7.1/x86_64/updates/security/firefox-38.6.1-1.el7_2.x86_64.rpm
 RUN yum --nogpgcheck -y install fftw-devel fftw2-devel libjpeg-turbo libjpeg-turbo-devel R-core R R-devel
 RUN cd /var/lib && git clone https://github.com/MadFace/MadFace-rpm -b MadUpdate
 RUN cd /var/lib/MadFace-rpm &&  git pull origin && ./rebuild.sh build madface
