--- a/templates/hf.core/madface.el7/Dockerfile
+++ b/templates/hf.core/madface.el7/Dockerfile
@@ -23,4 +23,5 @@ RUN yum --nogpgcheck -y install /var/lib/MadFace-rpm/RPMS/x86_64/MadFace*.rpm
 #--------------------------------------------------------
 # Run MadFace
 #--------------------------------------------------------
+CMD dbus-uuidgen > /var/lib/dbus/machine-id
 CMD /usr/sbin/madface-default-start
