--- a/templates/hf.core/docker-compose.yml
+++ b/templates/hf.core/docker-compose.yml
@@ -1,35 +1,29 @@
 version: "2.0"
 
 services:
- ## Images of HF & MF
- # happyface basic system
- happyface.el6:
+
+ ## Services prividing HF
+ happyface-core.el6:
   build: happyface.el6
-  image: happyface/hf.core.el6
- happyface.el7:
-  build: happyface.el7
-  image: happyface/hf.core.el7
-
- # madface basic system
- madface.el6:
-  build: madface.el6
-  image: happyface/mf.core.el6
- madface.el7:
-  build: madface.el7
-  image: happyface/mf.core.el7
-
- ## Services prividing HF & MF
- happyface-core:
   image: happyface/hf.core.el6
   ports:
     - "8001:80"
   volumes: 
     - "$PWD/payloads:/tmp/payloads"
- madface-core:
+
+ happyface-core.el7:
+  build: happyface.el7
+  image: happyface/hf.core.el7
+
+ ## Services prividing HF
+ madface-core.el6:
+  build: madface.el6
   image: happyface/mf.core.el6
   ports:
     - "9001:8111"
   volumes: 
     - "$PWD/payloads:/tmp/payloads"
 
-
+ madface-core.el7:
+  build: madface.el7
+  image: happyface/mf.core.el7
