--- a/templates/hmf.integration-devel/hmf.integration.el6/Dockerfile
+++ b/templates/hmf.integration-devel/hmf.integration.el6/Dockerfile
@@ -48,32 +48,40 @@ ADD scim /etc/skel/.scim
 # Rebuilding HappyFace instance
 #--------------------------------------------------------
 RUN cd /var/lib && git clone https://github.com/HappyFaceGoettingen/HappyFace-Integration-Server -b MadUpdate
+RUN cd /var/lib/HappyFace-Integration-Server && git pull origin && ./rebuild.sh atlas
 RUN cd /var/lib/HappyFace-Integration-Server && git pull origin && ./rebuild.sh happyface
+RUN cd /var/lib/HappyFace-Integration-Server && git pull origin && ./rebuild.sh extra
+#RUN cd /var/lib/HappyFace-Integration-Server && git pull origin && ./rebuild.sh webservice
+
+
 
 #--------------------------------------------------------
 # Installing HappyFace instance
 #--------------------------------------------------------
 RUN yum clean all
 RUN yum --nogpgcheck -y install /var/lib/HappyFace-Integration-Server/extras/python-migrate-*.rpm
-RUN yum --nogpgcheck -y install /var/lib/HappyFace-Integration-Server/RPMS/x86_64/*.rpm
+RUN yum --nogpgcheck -y install /var/lib/HappyFace-Integration-Server/RPMS/x86_64/*.rpm /var/lib/HappyFace-Integration-Server/RPMS/noarch/*.rpm
 
 
 #--------------------------------------------------------
-# Rebuilding MadFace instance
+# Rebuilding MadMask instance
 #--------------------------------------------------------
-RUN yum -y install ftp://mirror.switch.ch/pool/4/mirror/scientificlinux/6.6/x86_64/updates/security/firefox-38.6.1-1.el6_7.x86_64.rpm 
-RUN yum --nogpgcheck -y install fftw-devel fftw2-devel libjpeg-turbo libjpeg-turbo-devel R-core R R-devel
-RUN cd /var/lib && git clone https://github.com/MadFace/MadFace-rpm -b MadUpdate
-RUN cd /var/lib/MadFace-rpm && git pull origin && ./rebuild.sh build madface
+
+
+#RUN yum -y install ftp://mirror.switch.ch/pool/4/mirror/scientificlinux/6.6/x86_64/updates/security/firefox-38.6.1-1.el6_7.x86_64.rpm 
+#RUN yum --nogpgcheck -y install firefox
+#RUN yum --nogpgcheck -y install fftw-devel fftw2-devel libjpeg-turbo libjpeg-turbo-devel R-core R R-devel
+#RUN cd /var/lib && git clone https://github.com/MadFace/MadFace-rpm -b MadUpdate
+#RUN cd /var/lib/MadFace-rpm && git pull origin && ./rebuild.sh build madface
 
 #--------------------------------------------------------
 # Installing MadFace instance
 #--------------------------------------------------------
-RUN yum clean all
-RUN yum --nogpgcheck -y install /var/lib/MadFace-rpm/RPMS/x86_64/MadFace*.rpm
+#RUN yum clean all
+#RUN yum --nogpgcheck -y install /var/lib/MadFace-rpm/RPMS/x86_64/MadFace*.rpm
 
 #--------------------------------------------------------
-# Run MadFace
+# For running MadFace instance
 #--------------------------------------------------------
 CMD dbus-uuidgen > /var/lib/dbus/machine-id ## && /usr/sbin/madface-default-start
 
