--- a/mad-gantry.conf
+++ b/mad-gantry.conf
@@ -1,3 +1,16 @@
 ## Some default dirs
-WLCG_CONFIG_DIR=ship
-VOLUME_DIR=payloads
+SHIP_DIR=ship
+PAYLOADS_DIR=payloads
+
+## A common Docker image for ship
+SHIP_IMAGE=happyface/hmf.el6
+PAYLOAD_MOUNT_POINT=/site
+
+## DEFAULT ports in a template file
+DEFAULT_WEB_PORT=80
+DEFAULT_MOBILE_PORT=8111
+
+WEB_PORT_START=10000
+MOBILE_PORT_START=20000
+
+
