--- a/mad-gantry.conf
+++ b/mad-gantry.conf
@@ -9,8 +9,10 @@ PAYLOAD_MOUNT_POINT=/site
 ## DEFAULT ports in a template file
 DEFAULT_WEB_PORT=80
 DEFAULT_MOBILE_PORT=8111
+DEFAULT_SSH_PORT=22
 
 WEB_PORT_START=10000
 MOBILE_PORT_START=20000
+SSH_PORT_START=30000
 
 
