Added configs dir

--- a/mad-gantry.conf
+++ b/mad-gantry.conf
@@ -2,9 +2,15 @@
 SHIP_DIR=ship
 PAYLOADS_DIR=payloads
 
+## Default template
+DEFAULT_TEMPLATE=hmf.integration-devel
+
+
 ## A common Docker image for ship
 SHIP_IMAGE=happyface/hmf.el6
-PAYLOAD_MOUNT_POINT=/site
+PAYLOAD_SITES=/sites
+PAYLOAD_DATA=/var/lib/MadMaskData
+PAYLOAD_DEVEL=/devel
 
 ## DEFAULT ports in a template file
 DEFAULT_WEB_PORT=80
