--- a/templates/hmf.integration-devel/docker-compose.yml
+++ b/templates/hmf.integration-devel/docker-compose.yml
@@ -1,14 +1,14 @@
 version: "2.0"
 
 services:
- ## Images of HF & MF
- # HappyFace & MadFace Integration platform
+ ## Images of HF devel
+ # HappyFace & Mobile Application Integration platform
 
 # hmf.el7:
 #  build: hmf.integration.el7
 #  image: happyface/hmf.el7
 
- ## Services prividing HF & MF
+ ## Services prividing HF & HF Mobile
  hmf.integration-dev.el6:
   build: hmf.integration.el6
   image: happyface/hmf.el6
@@ -17,5 +17,5 @@ services:
     - "9901:8111"
     ## - "9922:22"
   volumes: 
-    - "$PWD/payloads/hmf.integration-devel:/devel"
+    - "$PWD/payloads/devel:/devel"
 
