Added ssh connection method

--- a/ticket.conf
+++ b/ticket.conf
@@ -7,9 +7,9 @@ CLOUD0="141.5.108.30"
 ##  When port is 100, then for example, 10100 = web port, 20100 = mobile port
 
 ## Tier-0 level in ATLAS
-LEVEL0_SITE="adcos"
-LEVEL0_HOST="$CLOUD0"
-LEVEL0_PORT="100"
+LEVEL0_SITE=(adcos)
+LEVEL0_HOST=($CLOUD0)
+LEVEL0_PORT=(100)
 
 
 ## National Tier level in ATLAS
