--- a/configs/level0/config.json
+++ b/configs/level0/config.json
@@ -1,15 +1,14 @@
 {
       "myname": "HappyFace",
 	"site": "World wide Atlas Distributed Computing System",
+        "site_name": "ADC",
 	"port": "8111",
-	"summary_json": "data/adcos/json/summary.json",
-	"capture": "data/adcos/capture",
-	"thumbnail": "data/adcos/thumbnail",
-        "index": "data/adcos/index",
-	"analysis": "data/adcos/analysis",
+        "data_dir": "data/ADC",
 	"analysis_image_size": "384x384",
+	"parallel_analysis": 4,
 	"keep_data_days": 20,
-	"debug_mode": 0,
+        "log_level": "DEBUG",
+	"firefox_profile": "/usr/share/madfoxd/firefox_profiles/pre-configured_firefox_profile_with_MadFox.default",
 	"xdisplay": [{
 		"name": "default",
 		"resolution": "1600x1600",
@@ -21,8 +20,6 @@
 		"number": "202",
 		"wait_firefox": 70
 		}],
-	"firefox_profile": "firefox_profiles/dbzvej40.default",
-	"parallel_analysis": 4,
 	"status": [{
 		"name": "Normal",
 		"color": "item-calm",
