--- a/configs/level2/config.json
+++ b/configs/level2/config.json
@@ -1,26 +1,23 @@
 {
       "myname": "HappyFace",
-	"site": "GoeGrid",
+	"site": "GoeGrid ATLAS Tier2",
+        "site_name": "GoeGrid",
 	"port": "8111",
-	"summary_json": "data/goegrid/json/summary.json",
-	"capture": "data/goegrid/capture",
-	"thumbnail": "data/goegrid/thumbnail",
-	"index": "data/goegrid/index",
-	"analysis": "data/goegrid/analysis",
+        "data_dir": "data/GoeGrid",
 	"analysis_image_size": "384x384",
+	"parallel_analysis": 2,
 	"keep_data_days": 15,
-	"debug_mode": 0,
+        "log_level": "DEBUG",
+	"firefox_profile": "/usr/share/madfoxd/firefox_profiles/pre-configured_firefox_profile_with_MadFox.default",
 	"xdisplay": [{
 		"name": "default",
 		"resolution": "1280x3840",
-		"number": "100"
+		"number": "1000"
 		}, {
 		"name": "middle",
 		"resolution": "1280x1280",
-		"number": "101"
+		"number": "1001"
 		}],
-	"firefox_profile": "firefox_profiles/dbzvej40.default",
-	"parallel_analysis": 2,
 	"status": [{
 		"name": "Normal",
 		"color": "item-calm",
