Changed some small issues such as usage, devel env, tools in Docker

--- a/templates/hmf.integration-devel/hmf.integration.el6/Dockerfile
+++ b/templates/hmf.integration-devel/hmf.integration.el6/Dockerfile
@@ -62,6 +62,7 @@ RUN yum --nogpgcheck -y install /var/lib/HappyFace-Integration-Server/RPMS/x86_6
 #--------------------------------------------------------
 # Rebuilding MadMask plugin
 #--------------------------------------------------------
+RUN yum --nogpgcheck -y install htop bwm-ng nmap
 RUN yum --nogpgcheck -y install firefox fftw-devel fftw2-devel libjpeg-turbo libjpeg-turbo-devel R-core R R-devel npm nodejs tmpwatch bc xdotool ImageMagick jq sysstat
 #RUN cd /var/lib && git clone https://github.com/HappyFaceGoettingen/HappyFace-MadMask.git -b master
 #RUN cd /var/lib/HappyFace-MadMask/HappyFace-MadMask && git pull origin && ./rebuild.sh build all
