Added some other sites in DE and gunship method

--- a/ticket.conf
+++ b/ticket.conf
@@ -18,10 +18,11 @@ LEVEL1_HOSTS=($CLOUD0 $CLOUD0)
 LEVEL1_PORTS=(110 111)
 
 
-## Site level in ATLAS
-LEVEL2_DE_SITES=(GoeGrid)
-LEVEL2_DE_HOSTS=($CLOUD0)
-LEVEL2_DE_PORTS=(200)
+## Site level in ATLAS DE
+LEVEL2_DE_SITES=(GoeGrid DESY-HH MPPMU)
+LEVEL2_DE_HOSTS=($CLOUD0 $CLOUD0 $CLOUD0)
+LEVEL2_DE_PORTS=(200 201 202)
+
 
 ## ALL level2 sites
 ALL_LEVEL2_SITES=(${LEVEL2_DE_SITES[*]})
