--- a/configs/level0/config.json
+++ b/configs/level0/config.json
@@ -5,20 +5,17 @@
 	"port": "8111",
         "data_dir": "data/ADC",
 	"analysis_image_size": "384x384",
-	"parallel_analysis": 4,
 	"keep_data_days": 20,
         "log_level": "DEBUG",
 	"firefox_profile": "/usr/share/madfoxd/firefox_profiles/pre-configured_firefox_profile_with_MadFox.default",
 	"xdisplay": [{
 		"name": "default",
 		"resolution": "1600x1600",
-		"number": "201",
-		"wait_firefox": 120
+		"number": "201"
 		}, {
 		"name": "large",
 		"resolution": "1800x3840",
-		"number": "202",
-		"wait_firefox": 70
+		"number": "202"
 		}],
 	"status": [{
 		"name": "Normal",
