Added new format of monitoring-urls.json

--- a/ticket.conf
+++ b/ticket.conf
@@ -1,30 +1,26 @@
-## Cloud definition
-CLOUD0="141.5.108.30"
-
-
 ## Site configurations
 ##  Host means a monitoring host running a HappyFace instance
 ##  When port is 100, then for example, 10100 = web port, 20100 = mobile port
 
-## Tier-0 level in ATLAS
+## Tier-0 level in ATLAS (= Level0)
 LEVEL0_SITE=(ADC)
 LEVEL0_HOST=($CLOUD0)
 LEVEL0_PORT=(100)
 
 
-## National Tier level in ATLAS
+## National Tier level in ATLAS (= Level1)
 LEVEL1_SITES=(DE FR)
 LEVEL1_HOSTS=($CLOUD0 $CLOUD0)
 LEVEL1_PORTS=(110 111)
 
 
-## Site level in ATLAS DE
+## Site level in ATLAS DE 
 LEVEL2_DE_SITES=(GoeGrid DESY-HH MPPMU)
 LEVEL2_DE_HOSTS=($CLOUD0 $CLOUD0 $CLOUD0)
 LEVEL2_DE_PORTS=(200 201 202)
 
 
-## ALL level2 sites
+## ALL level2 sites (= Level2)
 ALL_LEVEL2_SITES=(${LEVEL2_DE_SITES[*]})
 ALL_LEVEL2_HOSTS=(${LEVEL2_DE_HOSTS[*]})
 ALL_LEVEL2_PORTS=(${LEVEL2_DE_PORTS[*]})
