--- a/configs/level2/config.json
+++ b/configs/level2/config.json
@@ -6,7 +6,7 @@
         "data_dir": "data/GoeGrid",
 	"analysis_image_size": "384x384",
 	"keep_data_days": 15,
-        "log_level": "DEBUG",
+        "log_level": "INFO",
 	"firefox_profile": "/usr/share/madfoxd/firefox_profiles/pre-configured_firefox_profile_with_MadFox.default",
 	"xdisplay": [{
 		"name": "default",
