--- a/configs/level1/config.json
+++ b/configs/level1/config.json
@@ -5,18 +5,9 @@
 	"port": "8111",
         "data_dir": "data/ADC",
 	"analysis_image_size": "384x384",
-	"keep_data_days": 20,
-        "log_level": "DEBUG",
+	"keep_data_days": 15,
+        "log_level": "INFO",
 	"firefox_profile": "/usr/share/madfoxd/firefox_profiles/pre-configured_firefox_profile_with_MadFox.default",
-	"xdisplay": [{
-		"name": "default",
-		"resolution": "1600x1600",
-		"number": "201"
-		}, {
-		"name": "large",
-		"resolution": "1800x3840",
-		"number": "202"
-		}],
 	"status": [{
 		"name": "Normal",
 		"color": "item-calm",
