Added android-tools, made simple DE template

--- a/mad-gantry.conf
+++ b/mad-gantry.conf
@@ -11,6 +11,7 @@ SHIP_IMAGE=happyface/hmf.el6
 PAYLOAD_SITES=/sites
 PAYLOAD_DATA=/var/lib/MadMaskData
 PAYLOAD_DEVEL=/devel
+PAYLOAD_ANDROID_TOOLS=/usr/local/android-tools
 
 
 ## DEFAULT ports in a template file
