--- a/configs/level1/config.json
+++ b/configs/level1/config.json
@@ -1,9 +1,9 @@
 {
       "myname": "HappyFace",
-	"site": "World wide Atlas Distributed Computing System",
-        "site_name": "ADC",
+	"site": "WLCG ATLAS Germany",
+        "site_name": "DE",
 	"port": "8111",
-        "data_dir": "data/ADC",
+        "data_dir": "data/DE",
 	"analysis_image_size": "384x384",
 	"keep_data_days": 7,
         "log_level": "INFO",
@@ -17,17 +17,9 @@
 		"color": "item-calm",
 		"file": "https://mysterybabalon.files.wordpress.com/2011/07/madmax2.jpg?w=284&h=196"
             },{
-		"name": "Validation",
-		"color": "item-balanced",
-		"file": "http://images.techtimes.com/data/images/full/65853/mad-max-desert-drifter.jpg?w=600"
-            },{
 		"name": "Warning",
 		"color": "item-balanced",
 		"file": "http://surbrook.devermore.net/adaptationsmovie/madmax/wez.jpg"
-            },{
-		"name": "Error",
-		"color": "item-energized",
-		"file": "https://shutupandwatchthemovie.files.wordpress.com/2011/03/mad-max-2-humungus.jpg"
             },{
 		"name": "Critical",
 		"color": "item-assertive",
