Implemented automatic rebuild routine

--- a/mad-gantry.conf
+++ b/mad-gantry.conf
@@ -2,6 +2,9 @@
 SHIP_DIR=ship
 PAYLOADS_DIR=payloads
 
+## For mail
+MAILER=nail
+
 ## Default template
 DOCKER_YML_VERSION=2.0
 DEFAULT_TEMPLATE=hmf.integration-devel
