Updated email message

--- a/mad-gantry.conf
+++ b/mad-gantry.conf
@@ -5,6 +5,10 @@ PAYLOADS_DIR=payloads
 ## For mail
 MAILER=mail
 
+## Trial times to boot Docker VMs
+##  Note: Because, on slow Cloud node, booting VMs often fails.
+DOCKER_RELOAD_TRIAL=5
+
 ## Default template
 DOCKER_YML_VERSION=2.0
 DEFAULT_TEMPLATE=hmf.integration-devel
