--- a/mad-gantry.conf
+++ b/mad-gantry.conf
@@ -5,9 +5,13 @@ PAYLOADS_DIR=payloads
 ## For mail
 MAILER=mail
 
+## Some internal, default docker configurations
 ## Trial times to boot Docker VMs
 ##  Note: Because, on slow Cloud node, booting VMs often fails.
 DOCKER_RELOAD_TRIAL=5
+
+## Docker storage size, which is written in /etc/sysconfig/docker-storage (max = 100G)
+DOCKER_STORAGE_SIZE=20G
 
 ## Default template
 DOCKER_YML_VERSION=2.0
