Updated Docker files in templates

--- a/templates/hmf.integration-devel/hmf.integration.el7/Dockerfile
+++ b/templates/hmf.integration-devel/hmf.integration.el7/Dockerfile
@@ -6,6 +6,13 @@ RUN yum --nogpgcheck -y install git unzip wget rpm-build screen emacs tar initsc
 RUN yum --nogpgcheck -y install https://download1.rpmfusion.org/free/el/rpmfusion-free-release-6.noarch.rpm
 
 
+## Development and dependent packages
+RUN yum --nogpgcheck -y install htop bwm-ng nmap
+RUN yum --nogpgcheck -y install firefox fftw-devel fftw2-devel libjpeg-turbo libjpeg-turbo-devel R-core R R-devel npm nodejs tmpwatch bc xdotool ImageMagick jq sysstat
+RUN yum --nogpgcheck -y install ant ant-apache-regexp ant-nodeps java-1.5.0-gcj java-1.7.0-openjdk java-1.7.0-openjdk-devel java-1.7.0-openjdk-headless java_cup libgcj regexp sinjdoc xerces-j2 xml-commons-apis xml-commons-resolver zip
+RUN yum --nogpgcheck -y install yum install nss-softokn-freebl.i686 libstdc++.i686 zlib.i686
+
+
 #--------------------------------------------------------
 # Basic packages relating to SSH and Xwin 
 #  (I do not know if we can remove some of those)
@@ -13,7 +20,7 @@ RUN yum --nogpgcheck -y install https://download1.rpmfusion.org/free/el/rpmfusio
 RUN yum update -y
 
 RUN yum -y install openssh openssh-server openssh-clients
-#RUN sed -i '/pam_loginuid\.so/s/required/optional/' /etc/pam.d/sshd
+RUN sed -i '/pam_loginuid\.so/s/required/optional/' /etc/pam.d/sshd
 
 RUN yum -y install xorg-x11-server-Xvfb xorg-x11-fonts-Type1 xorg-x11-fonts-misc dejavu-lgc-sans-fonts xorg-x11-fonts-75dpi xorg-x11-fonts-100dpi
 RUN yum -y install xorg-x11-fonts-ISO8859-1-75dpi.noarch xorg-x11-fonts-ISO8859-1-100dpi.noarch
@@ -43,17 +50,12 @@ RUN cd /var/lib/HappyFace-Integration-Server && git pull origin && ./rebuild.sh 
 RUN yum clean all
 #RUN yum --nogpgcheck -y install /var/lib/HappyFace-Integration-Server/extras/python-migrate-*.rpm
 RUN yum --nogpgcheck -y install /var/lib/HappyFace-Integration-Server/RPMS/x86_64/HappyFaceCore-*.rpm
-#RUN yum --nogpgcheck -y install /var/lib/HappyFace-Integration-Server/RPMS/x86_64/HappyFace-ATLAS-*.rpm
+RUN yum --nogpgcheck -y install /var/lib/HappyFace-Integration-Server/RPMS/x86_64/HappyFace-ATLAS-*.rpm
 
 
 #--------------------------------------------------------
 # Rebuilding MadMask plugin
 #--------------------------------------------------------
-RUN yum --nogpgcheck -y install htop bwm-ng nmap
-RUN yum --nogpgcheck -y install firefox fftw-devel fftw2-devel libjpeg-turbo libjpeg-turbo-devel R-core R R-devel npm nodejs tmpwatch bc xdotool ImageMagick jq sysstat
-RUN yum --nogpgcheck -y install ant ant-apache-regexp ant-nodeps java-1.5.0-gcj java-1.7.0-openjdk java-1.7.0-openjdk-devel java-1.7.0-openjdk-headless java_cup libgcj regexp sinjdoc xerces-j2 xml-commons-apis xml-commons-resolver zip
-RUN yum --nogpgcheck -y install yum install nss-softokn-freebl.i686 libstdc++.i686 zlib.i686
-
 #RUN cd /var/lib && git clone https://github.com/HappyFaceGoettingen/HappyFace-MadMask.git -b master
 #RUN cd /var/lib/HappyFace-MadMask/HappyFace-MadMask && git pull origin && ./rebuild.sh build all
 
