--- a/configs/level2/config.json
+++ b/configs/level2/config.json
@@ -1,28 +1,31 @@
 {
-      "myname": "HappyFace",
-	"site": "GoeGrid ATLAS Tier2",
-        "site_name": "GoeGrid",
-	"port": "8111",
-        "data_dir": "data/GoeGrid",
-	"analysis_image_size": "384x384",
-	"keep_data_days": 7,
-        "log_level": "INFO",
-	"firefox_profile": "/usr/share/madfoxd/firefox_profiles/pre-configured_firefox_profile_with_MadFox.default",
-	"status": [{
-		"name": "Normal",
-		"color": "item-calm",
+    "myname": "HappyFace",
+    "version": "2.0.0 Git 1d56d980c44aae08fbc8ef82d40751e1f4ea996d",
+    "site": "GoeGrid ATLAS Tier2",
+    "site_name": "GoeGrid",
+    "ionic_port": "8111",
+    "mobile_port": "8111",
+    "web_port": "80",
+    "data_dir": "data/GoeGrid",
+    "analysis_image_size": "384x384",
+    "keep_data_days": 7,
+    "log_level": "INFO",
+    "firefox_profile": "/usr/share/madfoxd/firefox_profiles/pre-configured_firefox_profile_with_MadFox.default",
+    "status": [{
+	"name": "Normal",
+	"color": "item-calm",
 		"file": "http://i.ytimg.com/vi/hEJnMQG9ev8/maxresdefault.jpg"
-            },{
-		"name": "Warning",
-		"color": "item-balanced",
-		"file": "http://surbrook.devermore.net/adaptationsmovie/madmax/wez.jpg"
-            },{
-		"name": "Error",
-		"color": "item-energized",
-		"file": "https://shutupandwatchthemovie.files.wordpress.com/2011/03/mad-max-2-humungus.jpg"
-            },{
-		"name": "Critical",
-		"color": "item-assertive",
-		"file": "http://papystreaming.com/fr/files/2013/10/Mad-Max-2.jpg"
-            }]
+    },{
+	"name": "Warning",
+	"color": "item-balanced",
+	"file": "http://surbrook.devermore.net/adaptationsmovie/madmax/wez.jpg"
+    },{
+	"name": "Error",
+	"color": "item-energized",
+	"file": "https://shutupandwatchthemovie.files.wordpress.com/2011/03/mad-max-2-humungus.jpg"
+    },{
+	"name": "Critical",
+	"color": "item-assertive",
+	"file": "http://papystreaming.com/fr/files/2013/10/Mad-Max-2.jpg"
+    }]
 }
