--- a/mad-gantry.conf
+++ b/mad-gantry.conf
@@ -38,6 +38,10 @@ SSH_PORT_START=7000
 
 ## Configurations of Cloud infrastructures
 CLOUD0="141.5.108.30"
-[ "$(hostname -s)" == "mad-containers1" ] && CLOUD0="141.5.108.30"
-[ "$(hostname -s)" == "host-10-254-1-5" ] && CLOUD0="141.5.108.29"
-[ "$(hostname -s)" == "pcatlas11" ] && CLOUD0="134.76.86.224"
+OSX=""
+
+[ "$(hostname -s)" == "mad-containers1" ] && CLOUD0="141.5.108.30" && OSX=""
+[ "$(hostname -s)" == "host-10-254-1-5" ] && CLOUD0="141.5.108.29" && OSX=""
+[ "$(hostname -s)" == "pcatlas11" ] && CLOUD0="134.76.86.224" && OSX=""
+[ "$(hostname -s)" == "germanium32" ] && CLOUD0="127.0.0.1" && OSX=""
+
