Updating for iPhone builder

--- a/mad-gantry.conf
+++ b/mad-gantry.conf
@@ -15,7 +15,7 @@ DOCKER_STORAGE_SIZE=10G
 
 ## Default template
 DOCKER_YML_VERSION=2.0
-DEFAULT_TEMPLATE=hmf.integration-devel
+DEFAULT_TEMPLATE=hmf.devel
 
 
 ## A common Docker image for ship
