--- a/ticket.conf
+++ b/ticket.conf
@@ -26,3 +26,10 @@ ALL_LEVEL2_HOSTS=(${LEVEL2_DE_HOSTS[*]})
 ALL_LEVEL2_PORTS=(${LEVEL2_DE_PORTS[*]})
 
 
+## ALL level3 sites (= Level3), level 3 sites are not in a tree structure
+ALL_LEVEL3_SITES=(AdminServer ApplicationBuilder)
+ALL_LEVEL3_IMAGES=("happyface/admin-server.el7" "")
+ALL_LEVEL3_HOSTS=($CLOUD0 $CLOUD0)
+ALL_LEVEL3_PORTS=(101 102)
+
+
