Updated ssh lib

--- a/ticket.conf
+++ b/ticket.conf
@@ -33,3 +33,9 @@ ALL_LEVEL3_HOSTS=($CLOUD0 $CLOUD0)
 ALL_LEVEL3_PORTS=(101 102)
 
 
+## ---------------------------------
+## All sites
+## ---------------------------------
+ALL_SITES=(${LEVEL0_SITE} ${LEVEL1_SITES[*]} ${ALL_LEVEL2_SITES[*]} ${ALL_LEVEL3_SITES[*]})
+ALL_HOSTS=(${LEVEL0_HOST} ${LEVEL1_HOSTS[*]} ${ALL_LEVEL2_HOSTS[*]} ${ALL_LEVEL3_HOSTS[*]})
+ALL_PORTS=(${LEVEL0_PORT} ${LEVEL1_PORTS[*]} ${ALL_LEVEL2_PORTS[*]} ${ALL_LEVEL3_PORTS[*]})
