Added ELK template and configurations

--- a/mad-gantry.conf
+++ b/mad-gantry.conf
@@ -1,14 +1,17 @@
 ## Some default dirs
 SHIP_DIR=ship
 PAYLOADS_DIR=payloads
+SHIP_COMPOSER_TEMPLATE_DIR=configs/ship_composer
 
 ## For mail
 MAILER=mail
+
 
 ## Some internal, default docker configurations
 ## Trial times to boot Docker VMs
 ##  Note: Because, on slow Cloud node, booting VMs often fails.
 DOCKER_RELOAD_TRIAL=5
+
 
 ## Default template
 DOCKER_YML_VERSION=2.0
