--- a/ticket.conf
+++ b/ticket.conf
@@ -27,10 +27,11 @@ ALL_LEVEL2_PORTS=(${LEVEL2_DE_PORTS[*]})
 
 
 ## ALL level3 sites (= Level3), level 3 sites are not in a tree structure
-ALL_LEVEL3_SITES=(AdminServer ApplicationBuilder)
-ALL_LEVEL3_IMAGES=("happyface/admin-server.el7" "")
-ALL_LEVEL3_HOSTS=($CLOUD0 $CLOUD0)
-ALL_LEVEL3_PORTS=(101 102)
+ALL_LEVEL3_SITES=(AdminServer ApplicationBuilder GoeGridKibana)
+ALL_LEVEL3_IMAGES=("happyface/admin-server.el7" "" "happyface/kibana")
+ALL_LEVEL3_HOSTS=($CLOUD0 $CLOUD0 $CLOUD0)
+ALL_LEVEL3_PORTS=(101 102 103)
+ALL_LEVEL3_SHIPS=("" "" "docker-elk")
 
 
 ## ---------------------------------
