GoeGridELK with Kibana works

--- a/configs/customs/GoeGridELK/logstash/pipeline/logstash.conf
+++ b/configs/customs/GoeGridELK/logstash/pipeline/logstash.conf
@@ -1,13 +1,68 @@
 input {
-	tcp {
-		port => 5000
-	}
+  file {
+    path => "/billing/**/billing-20*"
+    sincedb_path => "/var/tmp/sincedb-dcache"
+    # uncomment next line if you want to import existing data
+    start_position => beginning
+    # uncomment next line to import files with logstash 2.2.x
+    # ignore_older => 0
+    type => "dcache-billing"
+  }
 }
 
-## Add your filters / logstash plugins configuration here
+filter {
+
+  if "RemoveFiles=" in [message] {
+  # Because RemoveFiles= is the only(source needed) non-conforming event.
+    grok {
+      patterns_dir => "/usr/share/logstash/patterns"
+      match => [ "message", "%{REMOVE_ON_POOL}" ]
+      named_captures_only => true
+      tag_on_failure => [ "_parse_dcache_failure10" ]
+    } # End of grok
+    mutate {
+      split => [ "pnfsids", "," ]
+      add_tag => [ "dcache_billing_removed" ]
+    } # End of Mutate to make a real list of the entries in pnfsids
+
+  } else {
+
+    grok {
+      patterns_dir => "/usr/share/logstash/patterns"
+      match => [ "message", "%{TRANSFER_CLASSIC}" ]
+      match => [ "message", "%{STORE_CLASSIC}" ]
+      match => [ "message", "%{RESTORE_CLASSIC}" ]
+      match => [ "message", "%{REQUEST_CLASSIC}" ]
+      match => [ "message", "%{REQUEST_DCAP}" ]
+      match => [ "message", "%{REMOVE_CLASSIC}" ]
+      match => [ "message", "%{REMOVE_SRM}" ]
+      named_captures_only => true
+      remove_field => [ "message" ]
+      tag_on_failure => [ "_parse_dcache_failure00" ]
+    }
+
+  } # End of if else
+
+
+  date {
+    match => [ "billing_time", "MM.dd HH:mm:ss" ]
+    timezone => "CET"
+    remove_field => [ "billing_time" ]
+  }
+
+  #alter {
+  #  condrewrite => [
+  #    "is_write", "true", "write",
+  #    "is_write", "false", "read"
+  #  ]
+  #}
+}
 
 output {
-	elasticsearch {
-		hosts => "__SITE__elasticsearch:9200"
-	}
+  elasticsearch {
+    hosts => "__SITE__elasticsearch:9200"
+    index => "dcache-billing-%{+YYYY.MM.dd}"
+    template_name => "billing"
+    #protocol => "http"
+  }
 }
