Fixed a bug in logstash dCache parser

--- a/configs/customs/GoeGridELK/logstash/pipeline/logstash.conf
+++ b/configs/customs/GoeGridELK/logstash/pipeline/logstash.conf
@@ -33,7 +33,7 @@ filter {
       match => [ "message", "%{STORE_CLASSIC}" ]
       match => [ "message", "%{RESTORE_CLASSIC}" ]
       match => [ "message", "%{REQUEST_CLASSIC}" ]
-      match => [ "message", "%{REQUEST_DCAP}" ]
+      #match => [ "message", "%{REQUEST_DCAP}" ]
       match => [ "message", "%{REMOVE_CLASSIC}" ]
       match => [ "message", "%{REMOVE_SRM}" ]
       named_captures_only => true
