--- a/configs/customs/GoeGridELK/logstash/pipeline/logstash.conf
+++ b/configs/customs/GoeGridELK/logstash/pipeline/logstash.conf
@@ -36,6 +36,7 @@ filter {
       #match => [ "message", "%{REQUEST_DCAP}" ]
       match => [ "message", "%{REMOVE_CLASSIC}" ]
       match => [ "message", "%{REMOVE_SRM}" ]
+      match => [ "message", "%{POOL_WARNING}" ]
       named_captures_only => true
       remove_field => [ "message" ]
       tag_on_failure => [ "_parse_dcache_failure00" ]
